Fix small layout issues on mobile (#597)
* Fix page spacing at mobile sizes

* Fix button alignment at mobile sizes

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -215,7 +215,6 @@ html {
 
     .control {
       display: inline-block;
-      width: 100%;
 
       .navbar-item {
         display: inline-block;
